# rust-rdkafka-example

./: .gitignore  Cargo.toml  docker-compose.yml
src/: main.rs  measurement.rs
