[package]
name = "rust-kafka-example"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.0", features = ["full"] }
rdkafka = {version = "0.36.2"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1.3", features = ["default", "serde"] }
futures = "0.3.30"
rand = "0.8.5"

async-std = "1.12.0"
mac_address = { version = "1.1.7", features = ["serde"]}

